--- a/core/app/views/MaterialPlans/blank.html
+++ b/core/app/views/MaterialPlans/blank.html
@@ -1,121 +1,125 @@
-#{extends 'main_full.html'/}
+#{extends 'main_full_v3.html'/}
 #{set title:"物料出货单 #" + dp.id /}
 #{set 'moreScripts'}
-    #{script 'jquery.filedrop.js'/}
-    #{script 'component/dropUpload.coffee'/}
     #{script 'materialPlans/edit.js'/}
-    #{script 'deliveryments/show.coffee'/}
 #{/set}
 
 #{errorMsgs /}
 #{flash_alert /}
 
+<div class="row">
+  <div class="col-md-12">
+    <form action="@{MaterialPlans.create()}" method="post" class="form-horizontal" id="updateDeliverymentForm">
+      <div class="box box-primary">
+        <div class="box-header"><h3 class="box-title">物料出货单信息</h3></div>
+        <div class="box-body">
+          <div class="form-group">
+            <label for="" class="col-sm-1 control-label">物料出货单ID</label>
+            <div class="col-sm-2">
+              <input type="text" class="form-control" id="deliverymentId" name="dp.id" value="${dp?.id}" readonly/>
+            </div>
+            <label for="" class="col-sm-1 control-label">State</label>
+            <div class="col-sm-2">
+              <input type="text" class="form-control" value="${dp?.state?.label()}" readonly>
+            </div>
+            <label for="" class="col-sm-1 control-label">供应商</label>
+            <div class="col-sm-2">
+              <input type="hidden" name="dp.cooperator.id" value="${dp?.cooperator?.id}" required/>
+              <input type="text" class="form-control" value="${dp?.cooperator?.name}" readonly/>
+            </div>
 
-#{info_row title:'物料出货单信息'/}
+            <label for="" class="col-sm-1 control-label">项目名称<span style="color:red">*</span></label>
+            <div class="col-sm-2">
+              <select name="dp.projectName" class="form-control" required>
+                <option value="${brandName}">${brandName}</option>
+              </select>
+            </div>
+          </div>
 
-
-<form action="@{MaterialPlans.create()}" method="post" name="updateDeliverymentForm" id="updateDeliverymentForm">
-  <div class="row-fluid">
-        <table class="table table-condensed table-bordered">
-          <tr>
-            <th>物料出货单ID</th>
-            <td><input type="text" id="deliverymentId" name="dp.id" value="${dp?.id}" readonly/></td>
-            <th>State</th>
-            <td><input type="text" value="${dp?.state?.label()}" readonly></td>
-          </tr>
-          <tr>
-            <th>物料出货单名称<span style="color:red">*</span></th>
-            <td><input type="text" class="span8" name="dp.name" value="${dp.name}" required></td>
-            <th>收货类型<span style="color:red">*</span></th>
-            <td>
-              <select name="dp.receipt" class="inline" required  id="receipt">
+          <div class="form-group">
+            <label for="" class="col-sm-1 control-label">物料出货单名称<span style="color:red">*</span></label>
+            <div class="col-sm-5">
+              <input type="text" class="form-control" name="dp.name" value="${dp.name}" required>
+            </div>
+            <label for="" class="col-sm-1 control-label">收货类型<span style="color:red">*</span></label>
+            <div class="col-sm-2">
+              <select name="dp.receipt" class="form-control" required id="receipt">
                 <option value="">收货类型</option>
               #{list items:models.material.MaterialPlan.R, as:'c'}
                 <option value="${c.name()}" ${c==dp.receipt?'selected':''}>${c.label()}</option>
               #{/list}
               </select>
-            </td>
-          </tr>
-          <tr>
-            <th>供应商</th>
-            <td>
-              <input type="hidden" name="dp.cooperator.id" value="${dp?.cooperator?.id}" required/>
-              <input type="text" value="${dp?.cooperator?.name}" readonly/>
-            </td>
-            <th>项目名称<span style="color:red">*</span></th>
-            <td>
-              <select name="dp.projectName" class="inline" required>
-                <option value="${brandName}">${brandName}</option>
-              </select>
-            </td>
-          </tr>
-          <tr style="display: none" id="receiveTr">
-            <th>收货方</th>
-            <td colspan="3">
-              <select name="dp.receiveCooperator.id" class="inline selectize" style="width:220px;" id="outCooperator">
-                <option value="">请输入收货供应商代码</option>
-              #{list items:cooperators, as:'cop'}
-                <option #{if dp?.receiveCooperator?.id==cop.id} selected #{/if} value="${cop.id}">${cop.name}</option>
-              #{/list}
-              </select>
-            </td>
-          </tr>
-          <tr>
-            <th>目的地</th>
-            <td colspan="3">
-              <textarea name="dp.address" rows="1" class="input-block-level" id="whouse">${dp?.address}</textarea>
-            </td>
-          </tr>
-          <tr>
-            <th>备注</th>
-            <td colspan="3">
-              <textarea name="dp.memo" rows="4" class="input-block-level">${dp?.memo}</textarea>
-            </td>
-          </tr>
-          <tr>
-            <td colspan="6">
-              <button class="btn btn-primary" name="create_record">创建</button>
-            </td>
-          </tr>
-        </table>
+            </div>
+            <div style="display:none" id="receiveTr">
+              <label for="" class="col-sm-1 control-label">收货方<span style="color:red">*</span></label>
+              <div class="col-sm-2">
+                <select name="dp.receiveCooperator.id" class="inline selectize" style="width:220px;" id="outCooperator">
+                  <option value="">请输入收货供应商代码</option>
+                #{list items:cooperators, as:'cop'}
+                  <option #{if dp?.receiveCooperator?.id==cop.id} selected #{/if} value="${cop.id}">${cop.name}</option>
+                #{/list}
+                </select>
+              </div>
+            </div>
+          </div>
 
+          <div class="form-group">
+            <label for="whouse" class="col-sm-1 control-label">目的地</label>
+            <div class="col-sm-8">
+              <input class="form-control" id="whouse" name="dp.address" value="${dp?.address}">
+            </div>
+          </div>
+
+          <div class="form-group">
+            <label for="" class="col-sm-1 control-label">备注</label>
+            <div class="col-sm-11">
+              <textarea name="dp.memo" rows="4" class="form-control">${dp?.memo}</textarea>
+            </div>
+          </div>
+
+        </div>
+        <div class="box-footer">
+          <button class="btn btn-primary" name="create_record">创建</button>
+        </div>
+      </div>
+
+      <div class="box box-success">
+        <div class="box-header"><h3 class="box-title">物料信息</h3></div>
+        <div class="box-body">
+          <table class="table table-condensed table-bordered" id="unit_table">
+            <tr>
+              <th>#</th>
+              <th>物料编码</th>
+              <th>物料名称</th>
+              <th>采购余量</th>
+              <th>采购未确认数量</th>
+              <th width="300px;">交货数量</th>
+              <th>项目名称</th>
+            </tr>
+          #{list items:units, as:'unit'}
+            <tr valign="middle" id="unit_${unit.id}">
+              <td>
+                <input type="checkbox" name="ck" value="${unit.id}">
+                <input type="hidden" name="dtos[${unit_index-1}].id" value="${unit.id}">
+              </td>
+              <td>${unit.code}</td>
+              <td>${unit.name}</td>
+              <td>${unit.surplusConfirmQty()}</td>
+              <td>${unit.surplusPendingQty()}</td>
+              <td>
+                <input type="text" style="width:150px;" data-origin="${unit.availableQty()}"
+                       class="form-control input-sm" surplusConfirmQty="${unit.surplusConfirmQty()}"
+                       name="dtos[${unit_index-1}].outQty">
+              </td>
+              <td>${unit.projectName}</td>
+            </tr>
+          #{/list}
+          </table>
+        </div>
+      </div>
+    </form>
   </div>
-
-  <div class="row-fluid">
-    <div class="span12" id="unit_list">
-      <table class="table table-condensed table-bordered" id="unit_table">
-        <tr>
-          <th>#</th>
-          <th>物料编码</th>
-          <th>物料名称</th>
-          <th>采购余量</th>
-          <th>采购未确认数量</th>
-          <th>交货数量</th>
-          <th>项目名称</th>
-        </tr>
-      #{list items:units, as:'unit'}
-        <tr class="text-center" id="unit_${unit.id}">
-          <td>
-            <input type="checkbox" name="ck" value="${unit.id}">
-            <input type="hidden" name="dtos[${unit_index-1}].id" value="${unit.id}">
-          </td>
-          <td>${unit.code}</td>
-          <td>${unit.name}</td>
-          <td>${unit.surplusConfirmQty()}</td>
-          <td>${unit.surplusPendingQty()}</td>
-          <td>
-            <input type="text" style="width:40px;" data-origin="${unit.availableQty()}"
-                   surplusConfirmQty="${unit.surplusConfirmQty()}" name="dtos[${unit_index-1}].outQty">
-          </td>
-          <td>${unit.projectName}</td>
-        </tr>
-      #{/list}
-
-      </table>
-    </div>
-  </div>
-  <input id='form_method' type="hidden" name="x-http-method-override" value="POST">
-</form>
+</div>
 
 
 
