调整销量分析宽度

--- a/core/app/views/Analyzes/sid.html
+++ b/core/app/views/Analyzes/sid.html
@@ -11,7 +11,7 @@
     <th>入库</th>
     <th>Reserved</th>
     <th>在库</th>
-    <th>Eur在库</th>
+    <th>Eur库存</th>
     <th>PS</th>
     <th>_PS</th>
     <th>Day1</th>
