--- a/core/app/views/MaterialPlans/index.html
+++ b/core/app/views/MaterialPlans/index.html
@@ -149,7 +149,7 @@
         </div>
 
         <div class="box-footer">
-        #{power.ck 'deliveryments.deliverymenttoapply'}
+        #{power.ck 'materialplans.apply'}
           <select name="applyId" class="form-control selectize" style="width:250px;">
             <option value="0">新请款单</option>
               #{list items:avaliableApplies, as:'a'}
