--- a/core/app/views/Payments/_materialApply.html
+++ b/core/app/views/Payments/_materialApply.html
@@ -20,7 +20,10 @@
       <th>出货日期</th>
       <th>物料编码</th>
       <th>单价</th>
-      <th>数量(交货/签收异常)</th>
+      <th>
+          #{if payment.mApply.type == models.material.MaterialApply.T.PLAN}数量(交货/签收异常)#{/if}
+          #{else }数量#{/else}
+      </th>
       <th>付款类型</th>
       <th>总额修正价</th>
       <th>付款金额</th>
@@ -29,42 +32,84 @@
       <th>#</th>
     </tr>
       #{list items: units, as:'fee'}
-        <tr id="paymentUnit_${fee.id}">
-            #{set punit: fee.materialPlanUnit/}
-            #{set records:fee.fixValueRecords()/}
-            #{set denyRecords: fee.denyRecords()/}
-          <td><input type="checkbox" name="paymentUnitIds" value="${fee.id}"></td>
-          <td width="200px;">
-            <a href="@{MaterialPlans.show(fee.materialPlan.id)}#${punit?.id}">${fee.materialPlan.id} #${punit.id}</a>
-          </td>
-          <td style="color:${punit.materialPlan.financeState?.rgb()}">${punit.materialPlan.financeState?.label()}</td>
-          <td>#{time_tooltip time:punit.materialPlan.deliveryDate/}</td>
-          <td>${punit.material.code}</td>
-          <td>${payment.currency.symbol()} ${punit.getPrice()}</td>
-          <td class="qty"
-              style="color:${(punit.receiptQty>0&&punit.qty!=punit.receiptQty)? 'red':''}">
-          ${punit.qty}/${punit.receiptQty?:0}
-          </td>
-          <td>${fee.feeType.nickName}</td>
-          <td>${payment.currency.symbol()} ${fee.fixValue}</td>
-          <td>${payment.currency.symbol()} ${fee.amount()}</td>
-          <td>${fee.payee.username}</td>
-          <td>
-            <span class="label ${fee.stateLabel()}">${fee.state.label()}</span>
-              #{power.ck 'paymentunits.deny'}
-                  #{if fee.state in [models.finance.PaymentUnit.S.APPLY, models.finance.PaymentUnit.S.APPROVAL]}
-                    <button data-url='@{PaymentUnits.deny(fee.id)}' class="btn btn-danger btn-mini paymentUnitDeny">
-                      驳回
-                    </button>
-                  #{/if}
-              #{/power.ck}
-          </td>
-          <td>
-            <a href="@{Applys.material(payment.mApply.id)}#${fee.id}" target="_blank">
-            ${payment.mApply.serialNumber} #${fee.id}
-            </a>
-          </td>
-        </tr>
+          #{if payment.mApply.type == models.material.MaterialApply.T.PLAN}
+            <!-- 出货单请款显示 -->
+            <tr id="paymentUnit_${fee.id}">
+                #{set punit: fee.materialPlanUnit/}
+                #{set records:fee.fixValueRecords()/}
+                #{set denyRecords: fee.denyRecords()/}
+              <td><input type="checkbox" name="paymentUnitIds" value="${fee.id}"></td>
+              <td width="200px;">
+                <a href="@{MaterialPlans.show(fee.materialPlan.id)}#${punit?.id}">${fee.materialPlan.id} #${punit.id}</a>
+              </td>
+              <td style="color:${punit.materialPlan.financeState?.rgb()}">${punit.materialPlan.financeState?.label()}</td>
+              <td>#{time_tooltip time:punit.materialPlan.deliveryDate/}</td>
+              <td>${punit.material.code}</td>
+              <td>${payment.currency.symbol()} ${punit.getPrice()}</td>
+              <td class="qty"
+                  style="color:${(punit.receiptQty>0&&punit.qty!=punit.receiptQty)? 'red':''}">
+              ${punit.qty}/${punit.receiptQty?:0}
+              </td>
+              <td>${fee.feeType.nickName}</td>
+              <td>${payment.currency.symbol()} ${fee.fixValue}</td>
+              <td>${payment.currency.symbol()} ${fee.amount()}</td>
+              <td>${fee.payee.username}</td>
+              <td>
+                <span class="label ${fee.stateLabel()}">${fee.state.label()}</span>
+                  #{power.ck 'paymentunits.deny'}
+                      #{if fee.state in [models.finance.PaymentUnit.S.APPLY, models.finance.PaymentUnit.S.APPROVAL]}
+                        <button data-url='@{PaymentUnits.deny(fee.id)}' class="btn btn-danger btn-mini paymentUnitDeny">
+                          驳回
+                        </button>
+                      #{/if}
+                  #{/power.ck}
+              </td>
+              <td>
+                <a href="@{Applys.material(payment.mApply.id)}#${fee.id}" target="_blank">
+                ${payment.mApply.serialNumber} #${fee.id}
+                </a>
+              </td>
+            </tr>
+          #{/if}
+          #{else }
+            <!-- 采购单请款显示 -->
+            <tr id="paymentUnit_${fee.id}">
+                #{set punit: fee.materialUnit/}
+                #{set records:fee.fixValueRecords()/}
+                #{set denyRecords: fee.denyRecords()/}
+              <td><input type="checkbox" name="paymentUnitIds" value="${fee.id}"></td>
+              <td width="200px;">
+                <a href="@{MaterialPurchases.show(fee.materialPurchase.id)}#${punit?.id}">${fee.materialPurchase.id}
+                  #${punit.id}</a>
+              </td>
+              <td style="color:${punit.materialPurchase.financeState?.rgb()}">${punit.materialPurchase.financeState?.label()}</td>
+              <td>#{time_tooltip time:punit.materialPurchase.orderTime/}</td>
+              <td>${punit.material.code}</td>
+              <td>${payment.currency.symbol()} ${punit.getPrice()}</td>
+              <td class="qty">
+              ${punit.planQty}
+              </td>
+              <td>${fee.feeType.nickName}</td>
+              <td>${payment.currency.symbol()} ${fee.fixValue}</td>
+              <td>${payment.currency.symbol()} ${fee.amount()}</td>
+              <td>${fee.payee.username}</td>
+              <td>
+                <span class="label ${fee.stateLabel()}">${fee.state.label()}</span>
+                  #{power.ck 'paymentunits.deny'}
+                      #{if fee.state in [models.finance.PaymentUnit.S.APPLY, models.finance.PaymentUnit.S.APPROVAL]}
+                        <button data-url='@{PaymentUnits.deny(fee.id)}' class="btn btn-danger btn-mini paymentUnitDeny">
+                          驳回
+                        </button>
+                      #{/if}
+                  #{/power.ck}
+              </td>
+              <td>
+                <a href="@{Applys.material(payment.mApply.id)}#${fee.id}" target="_blank">
+                ${payment.mApply.serialNumber} #${fee.id}
+                </a>
+              </td>
+            </tr>
+          #{/else}
         <tr id="unit_${fee.id}" style="display:none">
           <td colspan="4"></td>
           <td colspan="4">
