--- a/core/app/views/Materials/index.html
+++ b/core/app/views/Materials/index.html
@@ -70,7 +70,7 @@
               <td title="${m.specification}" data-toggle="tooltip">${m.specification.xxLong()}</td>
               <td title="${m.texture}" data-toggle="tooltip">${m.texture.xxLong()}</td>
               <td title="${m.technology}" data-toggle="tooltip">${m.technology.nineLong()}</td>
-              <td title="${m.version}" rel="tooltip">${m.version.overLong()}</td>
+              <td title="${m.version}" data-toggle="tooltip">${m.version.overLong()}</td>
               <td>${m.nowPurchasePlanPrice()}</td>
               <td>
                 <a href="@{Materials.edit(m.id)}" class="btn btn-xs btn-primary">编辑</a>
