* bootstrap3 升级 switch插件

--- a/core/app/views/_js_header_v3.html
+++ b/core/app/views/_js_header_v3.html
@@ -16,3 +16,4 @@
 #{script 'underscore-min.js'/}
 #{script 'bootstrap3/init.es6'/}
 #{script 'rails.js'/}
+#{script 'bootstrap3/bootstrap-switch.min.js'/}
