--- a/core/app/views/_css_header_v3.html
+++ b/core/app/views/_css_header_v3.html
@@ -8,3 +8,5 @@
 
 #{stylesheet 'bootstrap3/AdminLTE.css'/}
 #{stylesheet 'bootstrap3/skins/_all-skins.css'/}
+#{stylesheet 'bootstrap3/bootstrap-switch.min.css'/}
+
